@@ -2826,11 +2826,6 @@
     ],
     "learnings": [
       {
-        "level": 3,
-        "note": "Alpha 11",
-        "skillId": 15
-      },
-      {
         "level": 7,
         "note": "Alpha 11",
         "skillId": 17
