@@ -94,6 +94,11 @@
         "code": 31,
         "dataId": 1,
         "value": 0
+      },
+      {
+        "code": 43,
+        "dataId": 15,
+        "value": 1
       }
     ],
     "iconIndex": 150,
@@ -351,6 +356,11 @@
         "code": 31,
         "dataId": 1,
         "value": 0
+      },
+      {
+        "code": 43,
+        "dataId": 15,
+        "value": 1
       }
     ],
     "iconIndex": 150,
@@ -407,6 +417,11 @@
         "code": 31,
         "dataId": 1,
         "value": 0
+      },
+      {
+        "code": 43,
+        "dataId": 15,
+        "value": 1
       }
     ],
     "iconIndex": 384,
@@ -496,6 +511,11 @@
         "code": 32,
         "dataId": 34,
         "value": 0.1
+      },
+      {
+        "code": 43,
+        "dataId": 15,
+        "value": 1
       }
     ],
     "iconIndex": 577,
@@ -740,6 +760,11 @@
         "code": 32,
         "dataId": 34,
         "value": 0.16
+      },
+      {
+        "code": 43,
+        "dataId": 15,
+        "value": 1
       }
     ],
     "iconIndex": 691,
@@ -965,6 +990,11 @@
         "code": 22,
         "dataId": 2,
         "value": 0.015
+      },
+      {
+        "code": 43,
+        "dataId": 15,
+        "value": 1
       }
     ],
     "iconIndex": 385,
@@ -1226,6 +1256,11 @@
         "code": 43,
         "dataId": 82,
         "value": 1
+      },
+      {
+        "code": 43,
+        "dataId": 15,
+        "value": 1
       }
     ],
     "iconIndex": 537,
@@ -1419,6 +1454,11 @@
         "code": 22,
         "dataId": 2,
         "value": 0.015
+      },
+      {
+        "code": 43,
+        "dataId": 15,
+        "value": 1
       }
     ],
     "iconIndex": 692,
@@ -1708,6 +1748,11 @@
         "code": 22,
         "dataId": 2,
         "value": 0.015
+      },
+      {
+        "code": 43,
+        "dataId": 15,
+        "value": 1
       }
     ],
     "iconIndex": 545,
