@@ -339,6 +339,7 @@ Changes:
   ~ Magic Resistance/Proneness now learned by Player 1 at level 16 (was originally learned by Player 2 at level 15).
   ~ Shield Break now learned by Player 4 at level 18 (was originally learned by Player 1 at level 16).
   ~ Cut Down now learned by Player 1 by equipping an axe (was originally learned by Player 1 at level 11).
+  ~ Sharpen Dagger now learned by Player 4 by equipping a dagger (was originally learned by Player 4 at level 3).
  - Resprited all existing icons from 24px to 32px. Changed many icons of existing items.
  - Overhauled the equip comparison menu.
  - The pub/tavern has been rebranded as The Tipsy Oyster! Barkeep's name has been revealed to be Jeremy, and all of his establishments have been redesigned (except for the original in Haven Harbor).
